log-output-pingpong-app/manifests/debugging.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debugging1
  labels:
    app: debugging1
spec:
  containers:
  - image: ubuntu
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
