log-output-pingpong-app/manifests/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: ping-pong-log-output-application
spec:
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-writer
          image: ollikortelahti/devops-with-kubernetes:log-output-app-4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: ping-pong-log-output-application
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
