log-output-pingpong-app/manifests/ping-pong-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-application
  namespace: ping-pong-log-output-application
spec:
  selector:
    matchLabels:
      app: ping-pong-application
  template:
    metadata:
      labels:
        app: ping-pong-application
    spec:
      containers:
      - name: ping-pong-application
        image: ollikortelahti/devops-with-kubernetes:ping-pong-application8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-application-svc
  namespace: ping-pong-log-output-application
spec:
  type: LoadBalancer
  selector:
    app: ping-pong-application
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
