log-output-pingpong-app/manifests/timestamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp
  namespace: ping-pong-log-output-application
spec:
  selector:
    matchLabels:
      app: timestamp
  template:
    metadata:
      labels:
        app: timestamp
    spec:
      containers:
        - name: timestamp
          image: ollikortelahti/devops-with-kubernetes:timestamp-1
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: timestamp-svc
  namespace: ping-pong-log-output-application
spec:
  type: NodePort
  selector:
    app: timestamp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
